WIP: Squash later. Slowly getting there. Reconstructing inited and working HelloWorld IDEA project.